current/www/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: www
  labels:
    app: www
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: www
  template:
    metadata:
      name: www
      labels:
        app: www
    spec:
      containers:
        - name: www
          image: vatusa/www
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 25m
              memory: 50Mi
            limits:
              cpu: 50m
              memory: 100Mi
          ports:
            - containerPort: 80
      restartPolicy: Always
