current/www/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: www-ingress
  labels:
    app: www
spec:
  ingressClassName: nginx
  rules:
    - host: vatusa.net
      http:
        paths:
          - backend:
              service:
                name: www-service
                port:
                  number: 80
            path: /
            pathType: Prefix
    - host: www.vatusa.net
      http:
        paths:
          - backend:
              service:
                name: www-service
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - vatusa.net
        - www.vatusa.net
      secretName: vatusa-net-tls
